--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,23 +19,23 @@
     "content_scripts": [
       {
         "matches": ["*://*/*"],
-        "js": ["contentScript.js"]
+        "js": ["js/contentScript.js"]
       }
     ],
     "web_accessible_resources": [
        "bark_48.png"
      ],
     "icons": {
-        "16": "bark_16.png",
-        "48": "bark_48.png",
-        "128": "bark_128.png"
+        "16": "icons/bark_16.png",
+        "48": "icons/bark_48.png",
+        "128": "icons/bark_128.png"
     },
-    "options_page": "options.html",
+    "options_page": "configuration.html",
     "browser_action": {
         "default_icon": {
-            "16": "bark_16.png",
-            "48": "bark_48.png",
-            "128": "bark_128.png"
+            "16": "icons/bark_16.png",
+            "48": "icons/bark_48.png",
+            "128": "icons/bark_128.png"
         },
         "default_title": "Bark"
     }
