--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,42 +1,32 @@
 {
-    "name": "Bark",
-    "version": "1.2.1",
-    "manifest_version": 2,
-    "description": "push to iPhone",
-    "permissions": [
-        "*://*/*",
-        "activeTab",
-        "tabs",
-        "storage",
-        "notifications",
-        "contextMenus",
-        "clipboardRead"
-    ],
-    "background" : {
-        "page": "background.html",
-        "persistent": true
-    },
-    "content_scripts": [
-      {
-        "matches": ["*://*/*"],
-        "js": ["js/contentScript.js"]
-      }
-    ],
-    "web_accessible_resources": [
-       "bark_48.png"
-     ],
-    "icons": {
-        "16": "icons/bark_16.png",
-        "48": "icons/bark_48.png",
-        "128": "icons/bark_128.png"
-    },
-    "options_page": "configuration.html",
-    "browser_action": {
-        "default_icon": {
-            "16": "icons/bark_16.png",
-            "48": "icons/bark_48.png",
-            "128": "icons/bark_128.png"
-        },
-        "default_title": "Bark"
+  "name": "Bark",
+  "version": "1.2.2",
+  "manifest_version": 2,
+  "description": "push to iPhone",
+  "permissions": ["*://*/*", "activeTab", "tabs", "storage", "notifications", "contextMenus", "clipboardRead"],
+  "background": {
+    "page": "background.html",
+    "persistent": true
+  },
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "js": ["js/contentScript.js"]
     }
+  ],
+  "web_accessible_resources": ["bark_48.png"],
+  "icons": {
+    "16": "icons/bark_16.png",
+    "48": "icons/bark_48.png",
+    "128": "icons/bark_128.png"
+  },
+  "options_page": "configuration.html",
+  "browser_action": {
+    "default_icon": {
+      "16": "icons/bark_16.png",
+      "48": "icons/bark_48.png",
+      "128": "icons/bark_128.png"
+    },
+    "default_title": "Bark"
+  }
 }
